--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:               SQL-Statement
-version:            1.21_2
+version:            1.21_3
 abstract:           ~
 author:
     - Jeff Zucker <jeff@vpservices.com>, Jens Rehsack <rehsack@web.de>
 license:            perl
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Clone:         0.30
@@ -17,7 +19,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
