--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               SQL-Statement
-version:            1.27_01
+version:            1.27_02
 abstract:           SQL parsing and processing engine
 author:
     - Jeff Zucker <jeff@vpservices.com>, Jens Rehsack <rehsack@cpan.org>
@@ -9,8 +9,9 @@ distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
 build_requires:
-    DBD::File:     0.39
-    Test::Simple:  0.86
+    DBD::File:            0.39
+    DBI::DBD::SqlEngine:  0.01
+    Test::Simple:         0.90
 requires:
     Carp:          0
     Clone:         0.30
