--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,6 +31,6 @@ requires:
   perl: 5.008
 resources:
   license: http://dev.perl.org/licenses/
-  repository: https://svn.perl.org/modules/SQL-Statement/trunk/
+  repository: https://github.com/perl5-dbi/SQL-Statement
   x_MailingList: mailto:dbi-dev@perl.org
-version: 1.402
+version: 1.403
