Import of REHSACK/SQL-Statement-1.404 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.404
gitpan-cpan-path:         REHSACK/SQL-Statement-1.404.tar.gz
gitpan-cpan-author:       REHSACK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -22,6 +22,7 @@ no_index:
 recommends:
   Math::BigInt: 1.88
   Math::Complex: 1.56
+  Text::Soundex: 3.03_01
 requires:
   Carp: 0
   Clone: 0.30
@@ -33,4 +34,4 @@ resources:
   license: http://dev.perl.org/licenses/
   repository: https://github.com/perl5-dbi/SQL-Statement
   x_MailingList: mailto:dbi-dev@perl.org
-version: 1.403
+version: 1.404
